--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
+    "angular-svg-round-progressbar": "^4.0.0",
     "ng-circle-progress": "^1.5.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
